[package]
name = "earendel"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astro-rs = { version = "*", default-features = false, features = ["coordinates"], git = "https://github.com/eta077/astro-rs.git" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tracing = "0.1"
uom = "0.34"

[dev-dependencies]
tokio-test = "0.4.2"
